fix(theme.scss): centre align error header

--- a/web/theme.scss
+++ b/web/theme.scss
@@ -77,6 +77,7 @@ svg {
 
 #error > h1 {
   font-family: "Merriweather Sans", sans-serif;
+  text-align: center;
 }
 
 #error > p {
